Fix column spacing and attempt to fix Tweet button.

--- a/css/suuoh.css
+++ b/css/suuoh.css
@@ -75,6 +75,8 @@ footer [class*=" icon-"] {
 .container-fluid {
   margin-right: 10%;
   margin-left: 10%;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 .row-fluid {
